--- a/src/apps/ecidadania/news/locale/fr_FR/LC_MESSAGES/django.po
+++ b/src/apps/ecidadania/news/locale/fr_FR/LC_MESSAGES/django.po
@@ -1,21 +1,22 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# 
+#
 # Translators:
 #   <hugo.deslongchamps@googlemail.com>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: e-cidadania\n"
-"Report-Msgid-Bugs-To: http://code.ecidadania.org/\n"
-"POT-Creation-Date: 2012-06-14 11:43+0200\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2012-06-18 09:27+0200\n"
 "PO-Revision-Date: 2012-06-13 20:43+0000\n"
 "Last-Translator: hugodeslongchamps <hugo.deslongchamps@googlemail.com>\n"
-"Language-Team: French (http://www.transifex.net/projects/p/ecidadania/language/fr/)\n"
+"Language-Team: French (http://www.transifex.net/projects/p/ecidadania/"
+"language/fr/)\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: fr\n"
 "Plural-Forms: nplurals=2; plural=(n > 1)\n"
 
 #: admin.py:37
@@ -140,7 +141,9 @@ msgstr "Publier dans l'indexe;"
 msgid ""
 "If you mark this, the post will appear in the spaces index page AND in the "
 "main index."
-msgstr "Si vous marquez ceci, ce post apparaîtra dans la page d'indexe ET dans l'indexe princial."
+msgstr ""
+"Si vous marquez ceci, ce post apparaîtra dans la page d'indexe ET dans "
+"l'indexe princial."
 
 #: templates/news/post_confirm_delete.html:4
 msgid "Delete news"
@@ -153,7 +156,9 @@ msgstr "Supprimer le post"
 #: templates/news/post_confirm_delete.html:34
 msgid ""
 "Are you sure you want to delete this post? This action cannot be undone."
-msgstr "Etes-vous sûr de vouloir supprimer ce poste? Cette action ne peut être défaite."
+msgstr ""
+"Etes-vous sûr de vouloir supprimer ce poste? Cette action ne peut être "
+"défaite."
 
 #: templates/news/post_confirm_delete.html:38
 #: templates/news/post_detail.html:40 templates/news/post_detail_index.html:40
