--- a/src/apps/ecidadania/proposals/locale/fr_FR/LC_MESSAGES/django.po
+++ b/src/apps/ecidadania/proposals/locale/fr_FR/LC_MESSAGES/django.po
@@ -1,21 +1,22 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# 
+#
 # Translators:
 #   <hugo.deslongchamps@googlemail.com>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: e-cidadania\n"
-"Report-Msgid-Bugs-To: http://code.ecidadania.org/\n"
-"POT-Creation-Date: 2012-06-14 11:43+0200\n"
-"PO-Revision-Date: 2012-06-14 10:00+0000\n"
-"Last-Translator: Oscar Carballal <oscar.carballal@cidadania.coop>\n"
-"Language-Team: French (http://www.transifex.net/projects/p/ecidadania/language/fr/)\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2012-06-18 09:27+0200\n"
+"PO-Revision-Date: 2012-06-14 11:49+0000\n"
+"Last-Translator: hugodeslongchamps <hugo.deslongchamps@googlemail.com>\n"
+"Language-Team: French (http://www.transifex.net/projects/p/ecidadania/"
+"language/fr/)\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: fr\n"
 "Plural-Forms: nplurals=2; plural=(n > 1)\n"
 
 #: admin.py:61
@@ -52,11 +53,11 @@ msgstr "Hors-sujet"
 
 #: models.py:54
 msgid "content_type"
-msgstr ""
+msgstr "type_de_contenu"
 
 #: models.py:57
 msgid "object ID"
-msgstr ""
+msgstr "ID de l'objet"
 
 #: models.py:84
 msgid "Name"
@@ -64,11 +65,11 @@ msgstr "Prénom"
 
 #: models.py:94
 msgid "ProposalSet"
-msgstr ""
+msgstr "EnsembledePropositions"
 
 #: models.py:95
 msgid "ProposalSets"
-msgstr ""
+msgstr "EnsemblesdePropositions"
 
 #: models.py:123
 msgid "Code"
@@ -104,27 +105,27 @@ msgstr "Propositions"
 
 #: urls.py:32
 msgid "^$"
-msgstr ""
+msgstr "^$"
 
 #: urls.py:34
 msgid "^psets/(?P<set_id>\\w+)/edit/"
-msgstr ""
+msgstr "^enspropositons/(?P<set_id>\\w+)/editer/"
 
 #: urls.py:36
 msgid "^psets/(?P<set_id>\\w+)/delete/"
-msgstr ""
+msgstr "^enspropositons/(?P<set_id>\\w+)/supprimer/"
 
 #: urls.py:38
 msgid "^psets/(?P<set_id>\\w+)/"
-msgstr ""
+msgstr "^enspropositons/(?P<set_id>\\w+)/"
 
 #: urls.py:40
 msgid "^psets/"
-msgstr ""
+msgstr "^enspropositons/"
 
 #: urls.py:42
 msgid "^addset/"
-msgstr ""
+msgstr "^ajouterensemble/"
 
 #: urls.py:44
 msgid "^add/"
@@ -136,7 +137,7 @@ msgstr "^ajouter_un_vote_de_support/"
 
 #: urls.py:48
 msgid "^(?P<prop_id>\\w+)/$"
-msgstr ""
+msgstr "^(?P<prop_id>\\w+)/$"
 
 #: urls.py:50
 msgid "^(?P<prop_id>\\w+)/edit/$"
@@ -160,7 +161,7 @@ msgstr "Ajouter une nouvelle proposition"
 #: templates/proposals/proposal_confirm_delete.html:26
 #: templates/proposals/proposal_edit.html:139
 #: templates/proposals/proposal_list.html:50
-#: templates/proposals/proposalset_add.html:55
+#: templates/proposals/proposalset_add.html:70
 #: templates/proposals/proposalset_confirm_delete.html:26
 #: templates/proposals/proposalset_detail.html:50
 #: templates/proposals/proposalset_edit.html:74
@@ -180,9 +181,11 @@ msgstr "Admins/modérateurs lisez ceci"
 
 #: templates/proposals/proposal_add.html:145
 msgid ""
-"There are a lot more options in the proposals but they will appear only when"
-" you edit the proposal."
-msgstr "Les propositions ont plus d'options, mais celles-ci n'apparaîtrons seulement lorsque vous éditerais votre proposition."
+"There are a lot more options in the proposals but they will appear only when "
+"you edit the proposal."
+msgstr ""
+"Les propositions ont plus d'options, mais celles-ci n'apparaîtrons seulement "
+"lorsque vous éditerais votre proposition."
 
 #: templates/proposals/proposal_add.html:147
 msgid "How to add new proposals"
@@ -196,7 +199,9 @@ msgstr "Titre résumant la proposition, soyez concis (50 charactères)"
 msgid ""
 "Describe here your proposal with detail. You can add images or any other "
 "content."
-msgstr "Décrivez votre proposition avec détail ici. Vous pouvez ajouter des images ou n'impporte quoi d'autre."
+msgstr ""
+"Décrivez votre proposition avec détail ici. Vous pouvez ajouter des images "
+"ou n'impporte quoi d'autre."
 
 #: templates/proposals/proposal_add.html:151
 msgid "Latitude/Longitude"
@@ -204,7 +209,8 @@ msgstr "Lartitude/Longitude"
 
 #: templates/proposals/proposal_add.html:151
 msgid "You'll have to put this if you want to locate the proposal in a map."
-msgstr "Vous devrez mettre ça si vous voulez localiser la proposition sur une carte"
+msgstr ""
+"Vous devrez mettre ça si vous voulez localiser la proposition sur une carte"
 
 #: templates/proposals/proposal_add.html:152
 msgid "Tags"
@@ -212,20 +218,23 @@ msgstr "Tags"
 
 #: templates/proposals/proposal_add.html:152
 msgid ""
-"Relevant tags for the proposal, p.e. where the proposal is localted, what is"
-" related to it, etc."
-msgstr "Tags en relation avec la proposition, i.e: là ou la proposition est localisée, ce de quoi elle s'agit, etc."
+"Relevant tags for the proposal, p.e. where the proposal is localted, what is "
+"related to it, etc."
+msgstr ""
+"Tags en relation avec la proposition, i.e: là ou la proposition est "
+"localisée, ce de quoi elle s'agit, etc."
 
 #: templates/proposals/proposal_confirm_delete.html:4
 #: templates/proposals/proposal_confirm_delete.html:21
-#: templates/proposals/proposalset_confirm_delete.html:4
 msgid "Delete proposal"
 msgstr "Supprimer la proposition"
 
 #: templates/proposals/proposal_confirm_delete.html:23
 msgid ""
 "Are you sure you want to delete this proposal? This action cannot be undone."
-msgstr "Etes vous sûr de vouloir supprimer cette proposition? Cette action ne peut être défaite."
+msgstr ""
+"Etes vous sûr de vouloir supprimer cette proposition? Cette action ne peut "
+"être défaite."
 
 #: templates/proposals/proposal_confirm_delete.html:27
 #: templates/proposals/proposal_list.html:22
@@ -301,49 +310,52 @@ msgstr "suivant"
 
 #: templates/proposals/proposalset_add.html:5
 msgid "Add Proposal Set"
-msgstr ""
+msgstr "Ajouter un Ensemble de Propoitions"
 
 #: templates/proposals/proposalset_add.html:26
 msgid "Add new proposal set"
-msgstr ""
+msgstr "Ajouter un nouvel ensemble de propoitions"
 
-#: templates/proposals/proposalset_add.html:56
+#: templates/proposals/proposalset_add.html:71
 msgid "Create"
 msgstr "Créer"
 
+#: templates/proposals/proposalset_confirm_delete.html:4
 #: templates/proposals/proposalset_confirm_delete.html:21
 msgid "Delete Proposal Set"
-msgstr ""
+msgstr "Supprimer l'ensemble de propositions"
 
 #: templates/proposals/proposalset_confirm_delete.html:23
 msgid ""
 "Are you sure you want to delete this proposal set? This action cannot be "
 "undone."
 msgstr ""
+"Etes vous sûr de vouloir supprimer cet ensemble de proposition? Cette action "
+"ne peut être défaite."
 
 #: templates/proposals/proposalset_detail.html:5
 msgid "View Proposal Set"
-msgstr ""
+msgstr "Visioner l'Ensemble de Propositons"
 
 #: templates/proposals/proposalset_detail.html:46
 msgid "There is no proposals in this set"
-msgstr ""
+msgstr "Il n'y a pas de propositions de dans cet ensemble"
 
 #: templates/proposals/proposalset_edit.html:5
 msgid "Edit proposal set"
-msgstr ""
+msgstr "Editer l'ensemble de propositions"
 
 #: templates/proposals/proposalset_edit.html:22
 msgid "Edit Proposal Set"
-msgstr ""
+msgstr "Editer l'Ensemble de Propositions"
 
 #: templates/proposals/proposalset_list.html:5
 msgid "List all the proposal set"
-msgstr ""
+msgstr "Lister tout les ensembles de propositions"
 
 #: templates/proposals/proposalset_list.html:30
 msgid "Add proposal set"
-msgstr ""
+msgstr "Ajouter un ensemble de propositions"
 
 #: templates/proposals/proposalset_list.html:42
 msgid "Created by"
@@ -351,8 +363,8 @@ msgstr "Créé par"
 
 #: templates/proposals/proposalset_list.html:42
 msgid "at"
-msgstr ""
+msgstr "à"
 
 #: templates/proposals/proposalset_list.html:47
 msgid "There is no proposal set created"
-msgstr ""
+msgstr "Il n'y a pas d'ensemble de propositions créé"
