Minor modifications into README and buildout

--- a/src/README
+++ b/src/README
@@ -1,1 +1,2 @@
-Nothing to tell for this release. Refer to the documentation.
+**v0.1.7 beta**
+This is a beta release, some component may not work as expected. If you detect any bugs please file a ticket in http://code.ecidadania.org
